test/parser/should_fail/parens2.souc.bad
main() = do
	if "ok"
		print ("unclosed parens"
	end if
end main
